switch to Integer.valueOf as suggested by findbugs